<?xml version="1.0" encoding="utf-8"?><!--
  ~ Nextcloud Talk application
  ~
  ~ @author Mario Danic
  ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/conversation_voice_call"
        android:icon="@drawable/ic_call_white_24dp"
        android:orderInCategory="0"
        android:title="@string/nc_conversation_menu_voice_call"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/conversation_video_call"
        android:orderInCategory="0"
        android:title="@string/join_meeting"
        android:background="@color/colorPrimary"
        app:showAsAction="ifRoom"
        />


<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="110dp"-->
<!--        android:backgroundTint="@color/button_background_color"-->
<!--        android:text="Click Me"-->
<!--        android:textColor="@color/button_text_color"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold" />-->

    <item
        android:id="@+id/conversation_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:orderInCategory="1"
        android:title="@string/nc_conversation_menu_conversation_info"
        app:showAsAction="never" />
</menu>
