<?xml version="1.0" encoding="utf-8"?><!--
  ~ Nextcloud Talk application
  ~
  ~ @author Mario Danic
  ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
  ~ @author Marcel Hibbe
  ~ Copyright (C) 2021 Marcel Hibbe <dev@mhibbe.de>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controllerCallLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.CallActivity">

    <LinearLayout
        android:id="@+id/linearWrapperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/conversationRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey950"
            android:visibility="visible"
            android:orientation="vertical"
            tools:visibility="visible">

<!--            Module: Follow video-->
<!--            <LinearLayout-->
<!--                android:id="@+id/focusVideoWrapperLayout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="vertical">-->
<!--            </LinearLayout>-->

<!--            Module: END Follow video-->


<!--            <GridView-->
<!--                android:id="@+id/gridview1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:rowCount="1"-->
<!--                android:numColumns="1"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:scrollbars="horizontal"-->
<!--                android:stretchMode="columnWidth"/>-->

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:columnWidth="@dimen/shape_preference_width"
                android:layout_centerVertical="true"
                android:numColumns="2"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth" />

            <org.webrtc.SurfaceViewRenderer
                android:id="@+id/focus_video_surface_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />
<!--            <Button-->
<!--                android:id="@+id/button_close"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignRight="@+id/focus_video_surface_view"-->
<!--                android:layout_alignTop="@+id/focus_video_surface_view"-->
<!--                android:layout_marginRight="-5dp"-->
<!--                android:layout_marginTop="-5dp"-->
<!--                android:background="@drawable/ic_cancel_black_24dp" />-->

            <FrameLayout
                android:id="@+id/selfVideoViewWrapper"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <org.webrtc.SurfaceViewRenderer
                    android:id="@+id/selfVideoRenderer"
                    android:layout_width="@dimen/large_preview_dimension"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/switchSelfVideoButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_marginBottom="20dp"
                    android:alpha="0.7"
                    app:placeholderImage="@drawable/ic_switch_video_white_24px"
                    app:roundAsCircle="true" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/callInfosLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/callModeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/controller_call_incomingCallTextView"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Voice Call" />

                <TextView
                    android:id="@+id/callConversationNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:ellipsize="marquee"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Marsellus Wallace" />
            </LinearLayout>

            <View
                android:id="@+id/verticalCenter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <include
                android:id="@+id/callStates"
                layout="@layout/call_states"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/verticalCenter"
                android:layout_marginTop="-50dp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/requestsAndControlsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignBottom="@id/linearWrapperLayout"
        android:animateLayoutChanges="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/voteLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/voteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/nc_darkYellow"
                android:ellipsize="marquee"
                android:padding="5dp"
                android:text="@string/tap_to_vote"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="gone"
                />

            <!--            <com.facebook.drawee.view.SimpleDraweeView-->
<!--                android:id="@+id/callControlRaiseHand11"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:layout_marginEnd="10dp"-->
<!--                android:layout_weight="5"-->
<!--                android:visibility="visible"-->
<!--                app:backgroundImage="@color/call_buttons_background"-->
<!--                app:placeholderImage="@drawable/ic_hand_off"-->
<!--                app:roundAsCircle="true"-->
<!--                tools:visibility="visible" />-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/requestsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/requestToSpeakButton"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:ellipsize="marquee"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/kikao_request_to_speak"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:finalCornerAngle="50dp"
                app:initialCornerAngle="0dp"
                app:spinning_bar_color="@android:color/white"
                app:spinning_bar_padding="5dp"
                app:spinning_bar_width="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timeLeftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_oval"
                android:ellipsize="marquee"
                android:gravity="center"
                android:text="@string/kikao_time_left"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible"
                app:roundAsCircle="true"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/requestToInterveneButton"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/nc_darkRed"
                android:ellipsize="marquee"
                android:padding="5dp"
                android:text="@string/kikao_request_to_intervene"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:finalCornerAngle="50dp"
                app:initialCornerAngle="0dp"
                app:spinning_bar_color="@android:color/white"
                app:spinning_bar_padding="5dp"
                app:spinning_bar_width="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/callControls"
            android:layout_width="match_parent"
            android:layout_height="@dimen/call_controls_height"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/pictureInPictureButton"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                app:backgroundImage="@color/call_buttons_background"
                app:placeholderImage="@drawable/ic_baseline_picture_in_picture_alt_24"
                app:roundAsCircle="true" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/callControlRaiseHand"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:visibility="gone"
                app:backgroundImage="@color/call_buttons_background"
                app:placeholderImage="@drawable/ic_hand_off"
                app:roundAsCircle="true"
                tools:visibility="visible" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/speakerButton"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:backgroundImage="@color/call_buttons_background"
                app:placeholderImage="@drawable/ic_volume_mute_white_24dp"
                app:roundAsCircle="true" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/cameraButton"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:backgroundImage="@color/call_buttons_background"
                app:placeholderImage="@drawable/ic_videocam_off_white_24px"
                app:roundAsCircle="true" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/microphoneButton"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:backgroundImage="@color/call_buttons_background"
                app:placeholderImage="@drawable/ic_mic_off_white_24px"
                app:roundAsCircle="true"
                tools:ignore="ImageContrastCheck" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/hangupButton"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:backgroundImage="@color/nc_darkRed"
                app:placeholderImage="@drawable/ic_call_end_white_24px"
                app:roundAsCircle="true" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pipGroupCallOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/pipCallConversationNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textAlignment="center"
            android:maxLines="3"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="our group call" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:backgroundImage="@drawable/ic_circular_group"
            app:roundAsCircle="true" />

    </LinearLayout>

</RelativeLayout>
